﻿-------------------------------------------------
Version: 1.4.0 Alpha
Date:    30.12.2023
-------------------------------------------------
Bug fixes:
	- /

Improvements:
	- Compatibility with smarty 3 (xoops 2.5.11).

Security:
	- /

Important:	- The 1.4.0 series is only compatible under xoops 2.5.11.
			- The default templates are only compatible with a bootstrap 4 theme, the templates for version 3 of boostrap are in the extra folder.

Correction de bogues:
	- /

Améliorations:
	- Compatibilité avec smarty 3 (xoops 2.5.11).

Sécurités:
	- /

Important:	- La série 1.4.0 est compatible uniquement sous xoops 2.5.11.
			- Les templates par défaut sont compatibles uniquement avec un thème bootstrap 4, les templates pour la version 3 de boostrap sont dans le dossier extra.

-------------------------------------------------
Version: 1.3 Stable
Date:    29.01.2022
-------------------------------------------------
Bug fixes:
	- In docmanager, the number of documents displayed did not respect the value in the module's preferences.
	- Addition of an option "Force the download" (on some servers it is necessary to redirect on the documents because the download does not work).

Improvements:
	- Compatibility with version 2 of xmsocial.

Correction de bogues:
	- Dans docmanager, le nombre de documents affichés ne respectait pas la valeur dans les préférences du module.
	- Ajout d'une option "Forcer le téléchargement" (sur certains serveurs il est nécessaire de rediriger sur les documents car le téléchargement ne fonctionne pas).

Améliorations:
	- Compatibilité avec la version 2 de xmsocial.

-------------------------------------------------
Version: 1.22 Final
Date:    01.04.2021
-------------------------------------------------
Bug fixes:
	- Some extensions cannot be downloaded.

Correction de bogues:
	- Certaines extensions ne pouvaient pas être téléchargée.

-------------------------------------------------
Version: 1.21 Final
Date:    31.03.2021